Almost fixed the header, only the bootstrap of the collapsed version is left

--- a/pages/events/Events.module.css
+++ b/pages/events/Events.module.css
@@ -37,8 +37,26 @@
   z-index: 2;
   padding-inline: 10px;
   background: linear-gradient(to right, rgba(23, 37, 90, 0.8), rgba(201, 64, 101, 0.8));
-  padding: 2rem;
+  /* padding: 2rem; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  justify-content: center;
   color: #000;
+}
+
+.eventCardPodcast{
+  width: 100%;
+  max-width: 600px;
+  margin-bottom: 2rem;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  position: relative;
 }
 
 .mainContent {
